# Euclid

./: .gitignore  AUDIT.md  Euclid Plan.txt  IMPLEMENTATION_PLAN.md  README.md  _debug_i5_v2.py  _test_known_facts.py  _test_metric6b.py  answer-key-book-I.txt  answer-keys-e.json  answer_key_book_1.json  build_canvases.py  build_exe.py  change-log.md  euclid-plan-progress.md  euclid_1.jsx  euclid_2.jsx  generate_solved_proofs.py  hilbert_book1_derived_rules_and_answer_key.json  launch_euclid.pyw  proposition I.1.json  pyproject.toml  requirements.txt  run_euclid.py  test1.euclid  test2.euclid  test3.euclid  test_err.txt  test_out.txt  user_bookmarks.json  verified_proofs_book_1.json  wacky.euclid
.github/: copilot-instructions.md
euclid_py/: __init__.py  __main__.py  resources.py
proofs/: Prop_I_1_H.json
ref/: formal_system_extracted.txt  hilbert_axioms_extracted.txt  tarski_independent_extracted.txt  tarski_part2_extracted.txt
scripts/: _debug_area.py  _diag_all.py  _dump_proofs.py  _inspect_thms.py  _inspect_thms2.py  _test_all5.py  _test_angle.py  _test_area.py  _test_area2.py  _test_between.py  _test_derive.py  _test_i3.py  _test_i6.py  _test_i6_v3.py  _test_i6_v4.py  _test_rewrite.py  _verify_all.py  audit_all_proofs.py  check_i9_consistency.py  debug_da4.py  debug_i10.py  debug_i9_full.py  debug_i9_transfer.py  debug_i9_transfer_full.py  debug_metric_diseq.py  debug_sameside.py  dep_analysis.py  detailed_failures.py  diagnose_sketches.py  dump_json_proofs.py  find_indirect.py  generate_answer_key.py  generate_verified_proofs.py  identify_axioms.py  (+14 more)
(+162 files in other folders)
